--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="title-wrapper">
           <h3>Sopa de Legumes</h3>
         </div>
-        <img src="/imagens/sopa legumes.jpg" alt="Sopa de Legumes">
+        <img src="/cantinho/imagens/sopa legumes.jpg" alt="Sopa de Legumes">
         <p class="description">Reconfortante e nutritiva feita com legumes frescos.</p>
         <p class="price">€3.00</p>
       </div>
