--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="title-wrapper">
           <h3>Bacalhau c/ grão de bico</h3>
         </div>
-        <img src="/imagens/bacalhau-com-natas.jpg" alt="Bacalhau">
+        <img src="./imagens/bacalhau-com-natas.jpg" alt="Bacalhau">
         <p class="description">Delicioso bacalhau com grão de bico, batata e ovo cozido.</p>
         <p class="price">€10.50</p>
       </div>
@@ -60,7 +60,7 @@
         <div class="title-wrapper">
           <h3>Carne de Porco à Alentejana</h3>
         </div>
-        <img src="/imagens/rojoes.jpg" alt="Carne de Porco">
+        <img src="./imagens/rojoes.jpg" alt="Carne de Porco">
         <p class="description">Saboroso e temperado à moda alentejana.</p>
         <p class="price">€8.50</p>
       </div>
@@ -68,7 +68,7 @@
         <div class="title-wrapper">
           <h3>Maçã assada</h3>
         </div>
-        <img src="/imagens/fatiaamendocafe.jpg" alt="Maçã Assada">
+        <img src="./imagens/fatiaamendocafe.jpg" alt="Maçã Assada">
         <p class="description">Simples e saborosa para finalizar a refeição.</p>
         <p class="price">€2.50</p>
       </div>
@@ -84,7 +84,7 @@
         <div class="title-wrapper">
           <h3>Fatia de café</h3>
         </div>
-        <img src="/imagens/fatiaamendocafe.jpg" alt="Fatia de café">
+        <img src="./imagens/fatiaamendocafe.jpg" alt="Fatia de café">
         <p class="description">Delícia para os apreciadores de café.</p>
         <p class="price">€1.20</p>
       </div>
@@ -92,7 +92,7 @@
         <div class="title-wrapper">
           <h3>Fatia de bolo de chocolate</h3>
         </div>
-        <img src="/imagens/fatiachocolate.jpg" alt="Fatia de chocolate">
+        <img src="./imagens/fatiachocolate.jpg" alt="Fatia de chocolate">
         <p class="description">3 tipos de chocolate.</p>
         <p class="price">€1.80</p>
       </div>
@@ -100,7 +100,7 @@
         <div class="title-wrapper">
           <h3>Donut</h3>
         </div>
-        <img src="/imagens/donut.jpg" alt="Donut">
+        <img src="./imagens/donut.jpg" alt="Donut">
         <p class="description">Saboroso e com açúcar.</p>
         <p class="price">€1.00</p>
       </div>
@@ -108,7 +108,7 @@
         <div class="title-wrapper">
           <h3>Eclair</h3>
         </div>
-        <img src="/imagens/eclair.jpg" alt="Eclair">
+        <img src="./imagens/eclair.jpg" alt="Eclair">
         <p class="description">Simples e tradicional.</p>
         <p class="price">€1.10</p>
       </div>
