--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <button class="menu-toggle" aria-label="Abrir menu">☰</button>
       <ul class="menu-links">
         <li><a href="index.html">Início</a></li>
-        <li><a href="ementa.html">Ementa</a></li>
+        <li><a href="index2.html">Ementa</a></li>
         <li><a href="pastelaria.html">Pastelaria</a></li>
         <li><a href="padaria.html">Padaria</a></li>
         <li><a href="sobre.html">Sobre Nós</a></li>
