--- a/index2.html
+++ b/index2.html
@@ -46,7 +46,7 @@
       <div class="item">
         <h3>Sopa de Legumes</h3>
         <div class="ementa-card">
-          <img src="/imagens/sopa legumes.jpg" alt="Sopa de Legumes">
+          <img src="./imagens/sopa legumes.jpg" alt="Sopa de Legumes">
           <p class="description">Reconfortante e nutritiva feita com legumes frescos.</p>
         </div>
         <p class="price">€3.00</p>
@@ -55,7 +55,7 @@
       <div class="item">
         <h3>Bacalhau c/ grão de bico</h3>
         <div class="ementa-card">
-          <img src="/imagens/bacalhau-com-natas.jpg" alt="Bacalhau">
+          <img src="./imagens/bacalhau-com-natas.jpg" alt="Bacalhau">
           <p class="description">Delicioso bacalhau com grão de bico, batata e ovo cozido.</p>
         </div>
         <p class="price">€10.50</p>
@@ -64,7 +64,7 @@
       <div class="item">
         <h3>Carne de Porco à Alentejana</h3>
         <div class="ementa-card">
-          <img src="/imagens/rojoes.jpg" alt="Carne de Porco">
+          <img src="./imagens/rojoes.jpg" alt="Carne de Porco">
           <p class="description">Saboroso e temperado à moda alentejana.</p>
         </div>
         <p class="price">€8.50</p>
@@ -73,7 +73,7 @@
       <div class="item">
         <h3>Maçã assada</h3>
         <div class="ementa-card">
-          <img src="/imagens/fatiaamendocafe.jpg" alt="Maçã Assada">
+          <img src="./imagens/fatiaamendocafe.jpg" alt="Maçã Assada">
           <p class="description">Simples e saborosa para finalizar a refeição.</p>
         </div>
         <p class="price">€2.50</p>
@@ -90,7 +90,7 @@
       <div class="item">
         <h3>Fatia de café</h3>
         <div class="ementa-card pastelaria">
-          <img src="/imagens/fatiaamendocafe.jpg" alt="Fatia de café">
+          <img src="./imagens/fatiaamendocafe.jpg" alt="Fatia de café">
           <p class="description">Delícia para os apreciadores de café.</p>
         </div>
         <p class="price">€1.20</p>
@@ -99,7 +99,7 @@
       <div class="item">
         <h3>Fatia de bolo de chocolate</h3>
         <div class="ementa-card pastelaria">
-          <img src="/imagens/fatiachocolate.jpg" alt="Fatia de chocolate">
+          <img src="./imagens/fatiachocolate.jpg" alt="Fatia de chocolate">
           <p class="description">3 tipos de chocolate.</p>
         </div>
         <p class="price">€1.80</p>
@@ -108,7 +108,7 @@
       <div class="item">
         <h3>Donut</h3>
         <div class="ementa-card pastelaria">
-          <img src="/imagens/donut.jpg" alt="Donut">
+          <img src="./imagens/donut.jpg" alt="Donut">
           <p class="description">Saboroso e com açúcar.</p>
         </div>
         <p class="price">€1.00</p>
@@ -117,7 +117,7 @@
       <div class="item">
         <h3>Eclair</h3>
         <div class="ementa-card pastelaria">
-          <img src="/imagens/eclair.jpg" alt="Eclair">
+          <img src="./imagens/eclair.jpg" alt="Eclair">
           <p class="description">Simples e tradicional.</p>
         </div>
         <p class="price">€1.10</p>
