--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
-  <!-- Vincule este arquivo ao seu CSS abaixo -->
+  <!-- Importa o CSS -->
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -40,18 +40,18 @@
   <section class="ementa container">
     <h2 class="ementa-title">Ementa do dia</h2>
     <p class="ementa-subtitle">08/04/2025</p>
+
     <div class="ementa-grid">
-      
-      <!-- Cada "item" é um bloco com Título, Card (imagem+descrição) e Preço -->
+      <!-- Item 1 -->
       <div class="item">
         <h3>Sopa de Legumes</h3>
         <div class="ementa-card">
-          <img src="./imagens/sopa legumes.jpg" alt="Sopa de Legumes">
+          <img src="./imagens/sopa_legumes.jpg" alt="Sopa de Legumes">
           <p class="description">Reconfortante e nutritiva feita com legumes frescos.</p>
         </div>
         <p class="price">€3.00</p>
       </div>
-
+      <!-- Item 2 -->
       <div class="item">
         <h3>Bacalhau c/ grão de bico</h3>
         <div class="ementa-card">
@@ -60,7 +60,7 @@
         </div>
         <p class="price">€10.50</p>
       </div>
-
+      <!-- Item 3 -->
       <div class="item">
         <h3>Carne de Porco à Alentejana</h3>
         <div class="ementa-card">
@@ -69,7 +69,7 @@
         </div>
         <p class="price">€8.50</p>
       </div>
-
+      <!-- Item 4 -->
       <div class="item">
         <h3>Maçã assada</h3>
         <div class="ementa-card">
@@ -81,12 +81,13 @@
     </div>
   </section>
 
-  <!-- Secção PASTELARIA -->
+  <!-- Secção Pastelaria -->
   <section id="pastelaria" class="ementa container">
     <h2 class="ementa-title">Pastelaria</h2>
     <p class="ementa-subtitle">08/04/2025</p>
-    <div class="ementa-grid">
 
+    <div class="ementa-grid">
+      <!-- Item 1 -->
       <div class="item">
         <h3>Fatia de café</h3>
         <div class="ementa-card pastelaria">
@@ -95,7 +96,7 @@
         </div>
         <p class="price">€1.20</p>
       </div>
-
+      <!-- Item 2 -->
       <div class="item">
         <h3>Fatia de bolo de chocolate</h3>
         <div class="ementa-card pastelaria">
@@ -104,7 +105,7 @@
         </div>
         <p class="price">€1.80</p>
       </div>
-
+      <!-- Item 3 -->
       <div class="item">
         <h3>Donut</h3>
         <div class="ementa-card pastelaria">
@@ -113,7 +114,7 @@
         </div>
         <p class="price">€1.00</p>
       </div>
-
+      <!-- Item 4 -->
       <div class="item">
         <h3>Eclair</h3>
         <div class="ementa-card pastelaria">
