--- a/encomendas.html
+++ b/encomendas.html
@@ -9,10 +9,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <style>
-    /* Remoção do header, pois não desejamos a imagem e as frases superiores */
-    header.header { display: none; }
+    /* Remove o header com a imagem/frases */
+    header.header {
+      display: none;
+    }
 
-    /* Grid de Cards */
+    /* Grid de Cards (Ementa e Pastelaria) */
     .ementa-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -27,15 +29,15 @@
       border-radius: 6px;
       margin-bottom: 0.5rem;
     }
-    /* Títulos com altura fixa para 2 linhas */
+    /* Título com altura para 2 linhas */
     .item h3 {
-      min-height: 2.8em; 
+      min-height: 2.8em;
       line-height: 1.4em;
       text-align: center;
       overflow-wrap: break-word;
       margin-bottom: 0.5rem;
     }
-    /* Descrições com altura fixa para 2 linhas */
+    /* Descrição com 2 linhas fixas */
     .ementa-card .description {
       min-height: calc(1.4em * 2);
       display: -webkit-box;
@@ -44,7 +46,7 @@
       overflow: hidden;
       text-align: center;
     }
-    /* Definindo altura fixa para os cards para alinhar os controles */
+    /* Altura fixa do card para alinhar tudo */
     .ementa-card {
       height: 250px;
       background-color: #f9f9f9;
@@ -56,9 +58,11 @@
       align-items: center;
       justify-content: flex-start;
     }
-    .ementa-card.pastelaria { border-color: #ffc107; }
+    .ementa-card.pastelaria {
+      border-color: #ffc107;
+    }
 
-    /* Controles: preço e botão centralizados (um abaixo do outro) */
+    /* Controles (Preço e Botão) centralizados */
     .order-controls {
       display: flex;
       flex-direction: column;
@@ -94,9 +98,11 @@
       transition: opacity 0.3s;
       z-index: 9999;
     }
-    #toast.show { opacity: 1; }
+    #toast.show {
+      opacity: 1;
+    }
 
-    /* Carrinho e Dados do Cliente: layout em 2 colunas centralizado */
+    /* Carrinho e Dados do Cliente */
     .cart-container {
       display: flex;
       flex-wrap: wrap;
@@ -104,7 +110,8 @@
       margin-top: 20px;
       justify-content: center;
     }
-    .cart-box, .customer-box {
+    .cart-box,
+    .customer-box {
       flex: 1;
       min-width: 280px;
       max-width: 500px;
@@ -113,26 +120,26 @@
       border: 1px solid #ccc;
       border-radius: 8px;
     }
-    .cart-box h2, .customer-box h2 {
+    .cart-box h2,
+    .customer-box h2 {
       margin-bottom: 10px;
       text-align: center;
     }
-    /* Itens do carrinho */
+    /* Itens do carrinho: 3 colunas (nome, preço, remover) */
     .order-item {
-      display: flex;
-      justify-content: space-between;
+      display: grid;
+      grid-template-columns: 1fr auto auto;
       align-items: center;
+      gap: 10px;
       margin-bottom: 5px;
     }
-    .order-item .item-name {
-      /* Permite até 21 caracteres; se ultrapassar, exibe reticências */
-      max-width: 150px;
+    .item-name {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
     }
-    .order-item .item-price {
-      min-width: 70px;
+    .item-price {
+      min-width: 60px;
       text-align: right;
     }
     .order-item button {
@@ -142,12 +149,12 @@
       cursor: pointer;
       font-size: 0.9rem;
     }
-    /* Total do carrinho */
     .cart-total {
       margin-top: 10px;
       font-weight: 700;
       text-align: right;
     }
+
     /* Formulário do Cliente */
     .customer-box label {
       display: block;
@@ -165,7 +172,6 @@
       color: red;
       margin-left: 3px;
     }
-    /* Botões finais */
     .final-buttons {
       display: flex;
       gap: 10px;
@@ -221,7 +227,7 @@
         <div class="item">
           <h3>Sopa de Legumes</h3>
           <div class="ementa-card">
-            <img src="./imagens/sopa legumes.jpg" alt="Sopa de Legumes">
+            <img src="./imagens/sopa_legumes.jpg" alt="Sopa de Legumes">
             <p class="description">Reconfortante e nutritiva feita com legumes frescos.</p>
           </div>
           <div class="order-controls">
@@ -257,7 +263,7 @@
         <div class="item">
           <h3>Maçã assada</h3>
           <div class="ementa-card">
-            <img src="./imagens/maca assada.jpg" alt="Maçã Assada">
+            <img src="./imagens/maca_assada.jpg" alt="Maçã Assada">
             <p class="description">Simples e saborosa para finalizar a refeição.</p>
           </div>
           <div class="order-controls">
@@ -359,9 +365,7 @@
     <p>&copy; 2025 Cantinho da Avó. Todos os direitos reservados.</p>
   </footer>
 
-  <script src="js/main.js"></script>
   <script>
-    // Array para armazenar os itens do pedido
     let pedido = [];
 
     // Exibe um toast (popup) por 2 segundos
@@ -408,10 +412,12 @@
       pedido.forEach(item => {
         const subtotal = item.preco * item.quantidade;
         total += subtotal;
+        // Trunca o nome para 21 caracteres
         let displayName = item.nome;
         if (displayName.length > 21) {
           displayName = displayName.substring(0, 21) + '...';
         }
+        // Cria o elemento do item (3 colunas: nome, preço, remover)
         const div = document.createElement('div');
         div.className = 'order-item';
         div.innerHTML = `
@@ -437,6 +443,7 @@
         alert('Por favor, preencha todos os campos obrigatórios.');
         return;
       }
+
       let mensagem = 'Pedido:%0A';
       let total = 0;
       pedido.forEach(item => {
