--- a/index.html
+++ b/index.html
@@ -42,43 +42,38 @@
   <section class="ementa container">
     <h2 class="ementa-title">Ementa do dia</h2>
     <p class="ementa-subtitle">08/04/2025</p>
-
     <div class="ementa-grid">
-      <!-- Item 1 -->
+      <!-- Card 1: Sopa de Legumes -->
       <div class="item">
         <h3>Sopa de Legumes</h3>
         <div class="ementa-card">
           <img src="./imagens/sopa_legumes.jpg" alt="Sopa de Legumes">
           <p class="description">Reconfortante e nutritiva feita com legumes frescos.</p>
         </div>
-        <p class="price">€3.00</p>
       </div>
-      <!-- Item 2 -->
+      <!-- Card 2: Bacalhau c/ grão de bico -->
       <div class="item">
         <h3>Bacalhau c/ grão de bico</h3>
         <div class="ementa-card">
           <img src="./imagens/bacalhau-com-natas.jpg" alt="Bacalhau">
           <p class="description">Delicioso bacalhau com grão de bico, batata e ovo cozido.</p>
         </div>
-        <p class="price">€10.50</p>
       </div>
-      <!-- Item 3 -->
+      <!-- Card 3: Carne de Porco à Alentejana -->
       <div class="item">
         <h3>Carne de Porco à Alentejana</h3>
         <div class="ementa-card">
           <img src="./imagens/rojoes.jpg" alt="Carne de Porco">
           <p class="description">Saboroso e temperado à moda alentejana.</p>
         </div>
-        <p class="price">€8.50</p>
       </div>
-      <!-- Item 4 -->
+      <!-- Card 4: Maçã assada -->
       <div class="item">
         <h3>Maçã assada</h3>
         <div class="ementa-card">
           <img src="./imagens/fatiaamendocafe.jpg" alt="Maçã Assada">
           <p class="description">Simples e saborosa para finalizar a refeição.</p>
         </div>
-        <p class="price">€2.50</p>
       </div>
     </div>
   </section>
@@ -87,43 +82,38 @@
   <section id="pastelaria" class="ementa container">
     <h2 class="ementa-title">Pastelaria</h2>
     <p class="ementa-subtitle">08/04/2025</p>
-
     <div class="ementa-grid">
-      <!-- Item 1 -->
+      <!-- Card 1: Fatia de café -->
       <div class="item">
         <h3>Fatia de café</h3>
         <div class="ementa-card pastelaria">
           <img src="./imagens/fatiaamendocafe.jpg" alt="Fatia de café">
           <p class="description">Delícia para os apreciadores de café.</p>
         </div>
-        <p class="price">€1.20</p>
       </div>
-      <!-- Item 2 -->
+      <!-- Card 2: Fatia de bolo de chocolate -->
       <div class="item">
         <h3>Fatia de bolo de chocolate</h3>
         <div class="ementa-card pastelaria">
-          <img src="./imagens/fatiachocolate.jpg" alt="Fatia de chocolate">
+          <img src="./imagens/fatiachocolate.jpg" alt="Fatia de bolo de chocolate">
           <p class="description">3 tipos de chocolate.</p>
         </div>
-        <p class="price">€1.80</p>
       </div>
-      <!-- Item 3 -->
+      <!-- Card 3: Donut -->
       <div class="item">
         <h3>Donut</h3>
         <div class="ementa-card pastelaria">
           <img src="./imagens/donut.jpg" alt="Donut">
           <p class="description">Saboroso e com açúcar.</p>
         </div>
-        <p class="price">€1.00</p>
       </div>
-      <!-- Item 4 -->
+      <!-- Card 4: Eclair -->
       <div class="item">
         <h3>Eclair</h3>
         <div class="ementa-card pastelaria">
           <img src="./imagens/eclair.jpg" alt="Eclair">
           <p class="description">Simples e tradicional.</p>
         </div>
-        <p class="price">€1.10</p>
       </div>
     </div>
   </section>
