--- a/index.html
+++ b/index.html
@@ -103,16 +103,19 @@
     .ementa {
       padding: 2rem 0;
       text-align: center;
-      margin-bottom: 40px; /* espaçamento extra antes do rodapé */
+      margin-bottom: 20px; /* espaçamento reduzido antes do rodapé */
     }
+    /* Títulos maiores */
     .ementa-title {
-      font-size: 1.75rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 0.5rem;
     }
+    /* Subtítulos (datas) maiores e com menos espaçamento */
     .ementa-subtitle {
       color: #777;
-      margin-bottom: 2rem;
+      font-size: 1.75rem;
+      margin-bottom: 1rem;
     }
     /* GRID DE CARDS */
     .ementa-grid {
