--- a/ementa.html
+++ b/ementa.html
@@ -111,6 +111,30 @@
   </style>
 </head>
 <body>
+   <!-- Navegação -->
+  <nav class="nav">
+    <div class="container nav-container">
+      <div class="logo">Cantinho da Avó</div>
+      <button class="menu-toggle" aria-label="Abrir menu">☰</button>
+      <ul class="menu-links">
+        <li><a href="index.html">Início</a></li>
+        <li><a href="ementa.html">Ementa</a></li>
+        <li><a href="pastelaria.html">Pastelaria</a></li>
+        <li><a href="padaria.html">Padaria</a></li>
+        <li><a href="encomendas.html">Encomendas</a></li>
+        <li><a href="sobre.html">Sobre Nós</a></li>
+        <li><a href="contatos.html">Contatos</a></li>
+      </ul>
+    </div>
+  </nav>
+  
+  <!-- Header -->
+  <header class="header">
+    <div class="hero-content">
+      <h1>Comida caseira todos os dias!</h1>
+      <p>Sabores tradicionais</p>
+      <a href="encomendas.html" class="btn-encomenda">Fazer Encomenda</a>
+    </div>
   <h1>Ementa Semanal</h1>
   <div class="container">
     <h2 class="section-title">20 a 25 de Janeiro</h2>
