--- a/ementa.html
+++ b/ementa.html
@@ -247,8 +247,8 @@
   
   <!-- Seção Ementa Semanal -->
   <section id="ementa-semanal" class="container">
-    <h2 class="ementa-title">Ementa do dia</h2>
-    <p class="ementa-subtitle">08/04/2025</p>
+    <h2 class="ementa-title">Ementa Semana</h2>
+    <p class="ementa-subtitle">07/04/2025 a 12/04/2025</p>
     <div class="table-responsive">
       <table class="menu-table">
         <thead>
